@@ -38,7 +38,8 @@ SUBROUTINE lr_read_wf()
                                  & fwfft_orbital_gamma, calbec_rs_gamma,&
                                  & add_vuspsir_gamma, v_loc_psir,&
                                  & s_psir_gamma, real_space_debug
-  USE exx,                  ONLY : exx_grid_init, exx_div_check, exx_restart
+  USE exx,                  ONLY : exx_grid_init, exx_div_check, exx_restart,&
+                                   use_ace
   USE funct,                ONLY : dft_is_hybrid
   USE lr_exx_kernel,        ONLY : lr_exx_revc0_init, lr_exx_alloc
   USE wavefunctions_module, ONLY : evc
@@ -71,6 +72,10 @@ SUBROUTINE lr_read_wf()
   IF ( dft_is_hybrid() ) THEN
      !
      CALL open_buffer ( iunwfc, 'wfc', nwordwfc, io_level, exst ) 
+     !
+     ! The following line disables Lin Lin's ACE for TD-DFPT 
+     !
+     use_ace = .false.
      CALL exx_grid_init()
      CALL exx_div_check()
      CALL exx_restart(.true.)
